# EnergyConsumption_PredictionModel

./: config.py  main.py  pyproject.toml
data/raw/: .gitignore  Energy_consumption.csv.dvc
experiment/: eda.ipynb
src/: data_igestion.py
